==> yearnext/ysf/bsp/stm32f10x/map/map_timer.c <==
#include "stm32f10x.h"
#include "map_timer.h"
#include "comm_path.h"
#define IS_TIMER_PORT_INVAILD(n)                          ((n) >= _dimof(Timer))

void Map_Timer_Open(uint8_t port)
{
    hal_assert(IS_TIMER_PORT_INVAILD(port));
    
    if (port == 0)
    {
        //< open tick timer clock
    }
	else if (port == 1)
	{
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, ENABLE); 
	}	  
	else if (port == 2)
	{
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
	}
	else if (port == 3)
	{
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM3, ENABLE);
	}
	else if (port == 4)
	{
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM4, ENABLE);
	} 
	else if (port == 5)
	{
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM5, ENABLE);	
	} 
	else if (port == 6)
	{
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM6, ENABLE);
	} 
	else if (port == 7)
	{
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM7, ENABLE);
	} 
	else if (port == 8)
	{
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM8, ENABLE);
	}
	else if (port == 9)
	{	   
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM9, ENABLE);
	 }	
	else if (port == 10)
	{	   
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM10, ENABLE); 
	}  
	else if (port == 11) 
	{	  
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM11, ENABLE);  
	}  
	else if (port == 12)
	{	   
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM12, ENABLE);
	}  
	else if (port == 13) 
	{		
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM13, ENABLE);
	}
	else if (port == 14) 
	{		
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM14, ENABLE);
	}		 
	else if (port == 15)
	{
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM15, ENABLE);
	} 
	else if (port == 16)
	{
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM16, ENABLE);
	} 
	else
	{
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM17, ENABLE);
	}
}

void Map_Timer_Close(uint8_t port)
{
	hal_assert(IS_TIMER_PORT_INVAILD(port));

	if (port == 1)
	{
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM1, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM1, DISABLE);  
	}	  
	else if (port == 2)
	{
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM2, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM2, DISABLE);
	}
	else if (port == 3)
	{
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM3, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM3, DISABLE);
	}
	else if (port == 4)
	{
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM4, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM4, DISABLE);
	} 
	else if (port == 5)
	{
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM5, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM5, DISABLE);
	} 
	else if (port == 6)
	{
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM6, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM6, DISABLE);
	} 
	else if (port == 7)
	{
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM7, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM7, DISABLE);
	} 
	else if (port == 8)
	{
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM8, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM8, DISABLE);
	}
	else if (port == 9)
	{	   
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM9, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM9, DISABLE);  
	 }	
	else if (port == 10)
	{	   
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM10, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM10, DISABLE);  
	}  
	else if (port == 11) 
	{	  
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM11, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM11, DISABLE);  
	}  
	else if (port == 12)
	{	   
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM12, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM12, DISABLE);  
	}  
	else if (port == 13) 
	{		
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM13, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM13, DISABLE);  
	}
	else if (port == 14) 
	{		
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM14, ENABLE);
		RCC_APB1PeriphResetCmd(RCC_APB1Periph_TIM14, DISABLE);  
	}		 
	else if (port == 15)
	{
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM15, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM15, DISABLE);
	} 
	else if (port == 16)
	{
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM16, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM16, DISABLE);
	} 
	else
	{
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM17, ENABLE);
		RCC_APB2PeriphResetCmd(RCC_APB2Periph_TIM17, DISABLE);
	}
}

__STATIC_INLINE
void _TimerTimeMode_Init(uint8_t port, Hal_Timer_Handle *param)
{
	TIM_TimeBaseInitTypeDef TIM_TimeBaseInitStruct;
    NVIC_InitTypeDef NVIC_InitStructure;
    
	TIM_TimeBaseInitStruct.TIM_ClockDivision = TIM_CKD_DIV1;
	TIM_TimeBaseInitStruct.TIM_CounterMode = TIM_CounterMode_Up;
	TIM_TimeBaseInitStruct.TIM_Period = param->Period;
	TIM_TimeBaseInitStruct.TIM_Prescaler = param->Prescaler;

	TIM_DeInit(Timer[port]);
	TIM_TimeBaseInit(Timer[port], &TIM_TimeBaseInitStruct);
	TIM_ARRPreloadConfig(Timer[port], ENABLE);
	TIM_ClearITPendingBit(Timer[port], TIM_IT_Update);
	TIM_ITConfig(Timer[port], TIM_IT_Update, ENABLE);
    
    NVIC_InitStructure.NVIC_IRQChannel = TimerIrqn[port];
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
    
	TIM_Cmd(Timer[port], ENABLE);

	TimerUpCallback[port].Callback = param->Callback.Callback;
	TimerUpCallback[port].Param    = param->Callback.Param;
}
