==> yearnext/ysf/bsp/stm32f1xx/map/map_timer.c <==
#include "stm32f1xx.h"
#include "stm32f1xx_ll_rcc.h"
#include "stm32f1xx_ll_tim.h"
#include "stm32f1xx_ll_bus.h"
#include "map_timer.h"
#include "comm_path.h"
#define IS_TIMER_PORT_INVAILD(n)                          ((n) >= _dimof(Timer))

void Map_Timer_Open(uint8_t port)
{
    if (port == 0)
    {
        //< open tick timer clock
    }
#ifdef TIM1
	else if (port == 1)
	{
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM1);
	}	  
#endif 
    
#ifdef TIM2
	else if (port == 2)
	{
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM2);
	}
#endif
    
#ifdef TIM3
	else if (port == 3)
	{
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM3);
	}
#endif
    
#ifdef TIM4
	else if (port == 4)
	{
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM4);
	} 
#endif
    
#ifdef TIM5
	else if (port == 5)
	{
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM5);
	} 
#endif
    
#ifdef TIM6
	else if (port == 6)
	{
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM6);
	} 
#endif
    
#ifdef TIM7
	else if (port == 7)
	{
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM7);
	} 
#endif
    
#ifdef TIM8
	else if (port == 8)
	{
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM8);
	}
#endif
    
#ifdef TIM9
	else if (port == 9)
	{	   
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM9);
	 }	
#endif
    
#ifdef TIM10
	else if (port == 10)
	{	   
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM10);
	}  
#endif
    
#if TIM11
	else if (port == 11) 
	{	  
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM11);
	}  
#endif

#ifdef TIM12    
	else if (port == 12)
	{	   
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM12);
	}  
#endif
    
#ifdef TIM13
	else if (port == 13) 
	{		
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM13);;
	}
#endif
    
#ifdef TIM14
	else if (port == 14) 
	{		
		LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM14);
	}		
#endif
    
#ifdef TIM15
	else if (port == 15)
	{
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM15);
	} 
#endif
    
#ifdef TIM16
	else if (port == 16)
	{
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM16);
	} 
#endif
    
#ifdef TIM17
	else if(port == 17)
	{
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM17);
	}
#endif
    
    else
    {
        //< do nothing
    }
}

void Map_Timer_Close(uint8_t port)
{
	hal_assert(IS_TIMER_PORT_INVAILD(port));

    if (port == 0)
    {
        //< open tick timer clock
    }
#ifdef TIM1
	else if (port == 1)
	{
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM1);
	}	  
#endif 
    
#ifdef TIM2
	else if (port == 2)
	{
        LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM2);
	}
#endif
    
#ifdef TIM3
	else if (port == 3)
	{
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM3);
	}
#endif
    
#ifdef TIM4
	else if (port == 4)
	{
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM4);
	} 
#endif
    
#ifdef TIM5
	else if (port == 5)
	{
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM5);
	} 
#endif
    
#ifdef TIM6
	else if (port == 6)
	{
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM6);
	} 
#endif
    
#ifdef TIM7
	else if (port == 7)
	{
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM7);
	} 
#endif
    
#ifdef TIM8
	else if (port == 8)
	{
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM8);
	}
#endif
    
#ifdef TIM9
	else if (port == 9)
	{	   
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM9);
	 }	
#endif
    
#ifdef TIM10
	else if (port == 10)
	{	   
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM10);
	}  
#endif
    
#if TIM11
	else if (port == 11) 
	{	  
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM11);
	}  
#endif

#ifdef TIM12    
	else if (port == 12)
	{	   
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM12);
	}  
#endif
    
#ifdef TIM13
	else if (port == 13) 
	{		
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM13);;
	}
#endif
    
#ifdef TIM14
	else if (port == 14) 
	{		
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM14);
	}		
#endif
    
#ifdef TIM15
	else if (port == 15)
	{
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM15);
	} 
#endif
    
#ifdef TIM16
	else if (port == 16)
	{
        LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM16);
	} 
#endif
    
#ifdef TIM17
	else if(port == 17)
	{
        LL_APB1_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM17);
	}
#endif
    
    else
    {
        //< do nothing
    }
}

__STATIC_INLINE
void _TimerTimeMode_Init(uint8_t port, Hal_Timer_Handle *param)
{
	LL_TIM_InitTypeDef LL_TIM_InitStructure;

    LL_TIM_InitStructure.Autoreload = param->Period;
    LL_TIM_InitStructure.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
    LL_TIM_InitStructure.CounterMode = LL_TIM_COUNTERMODE_UP;
    LL_TIM_InitStructure.Prescaler = param->Prescaler;

    LL_TIM_DeInit(Timer[port]);
    LL_TIM_Init(Timer[port], &LL_TIM_InitStructure);
    LL_TIM_EnableARRPreload(Timer[port]);
    LL_TIM_ClearFlag_UPDATE(Timer[port]);
    LL_TIM_EnableIT_UPDATE(Timer[port]);
    
    NVIC_EnableIRQ(TimerIrqn[port]); 
    NVIC_SetPriority(TimerIrqn[port], param->Priority);  

	TimerUpCallback[port].TimeOut = param->Callback.TimeOut;
	TimerUpCallback[port].Param    = param->Callback.Param;
    
    LL_TIM_EnableCounter(Timer[port]);
}
